force-app/main/default/objects/Account/fields/aasasd__c.field-meta.xml
<CustomField>
    <fullName>aasasd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>aasasd</label>
    <type>Checkbox</type>
</CustomField>