force-app/main/default/objects/Account/fields/Augdt__c.field-meta.xml
<CustomField>
    <fullName>Augdt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Augdt</label>
    <type>Checkbox</type>
</CustomField>