force-app/main/default/objects/Account/fields/Doco__c.field-meta.xml
<CustomField>
    <fullName>Doco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Doco</label>
    <type>Checkbox</type>
</CustomField>