force-app/main/default/objects/Account/fields/Film__c.field-meta.xml
<CustomField>
    <fullName>Film__c</fullName>
    <label>Film</label>
    <length>10</length>
    <type>Text</type>
</CustomField>