force-app/main/default/objects/Account/fields/nnma__c.field-meta.xml
<CustomField>
    <fullName>nnma__c</fullName>
    <label>nnma</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>