force-app/main/default/objects/Account/fields/Nov2024__c.field-meta.xml
<CustomField>
    <fullName>Nov2024__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nov2024</label>
    <type>Checkbox</type>
</CustomField>