force-app/main/default/objects/Account/fields/oct2024APAC__c.field-meta.xml
<CustomField>
    <fullName>oct2024APAC__c</fullName>
    <label>oct2024APAC</label>
    <type>Date</type>
</CustomField>