force-app/main/default/objects/Account/fields/SHR__c.field-meta.xml
<CustomField>
    <fullName>SHR__c</fullName>
    <label>SHR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>