force-app/main/default/objects/Account/fields/Tea__c.field-meta.xml
<CustomField>
    <fullName>Tea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tea</label>
    <type>Checkbox</type>
</CustomField>