force-app/main/default/objects/Account/fields/Woww__c.field-meta.xml
<CustomField>
    <fullName>Woww__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Woww</label>
    <type>Checkbox</type>
</CustomField>